Kubernetes/stockAPI/overlay/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockapi
spec:
  ingressClassName: nginx
  rules:
    - host: "dev-app14.mfolabs.me"
      http:
        paths:
          - path: /api/Stock/
            pathType: Prefix
            backend:
              service:
                name: stockapi
                port:
                  number: 8001
